@@ -3,12 +3,16 @@
 # Put customizations to your image in this file.
 
 PATH=/opt/local/gnu/bin:/opt/local/bin:/opt/local/sbin:/usr/bin:/usr/sbin
+VLMCSD_VERSION="1112"
 
 # Exit if any commands fail
 set -o errexit
 
 # Configuring image specific packages
 echo "* Configuring image specific packages.";
+# wget https://github.com/Wind4/vlmcsd/releases/download/svn1112/binaries.tar.gz
+mkdir -p /opt/vlmcsd
+wget -O /opt/vlmcsd/vlmcsd-Solaris-x64 http://mirrors.itime.biz/vlmcsd/${VLMCSD_VERSION}/vlmcsd-Solaris-x64
 chmod +x /opt/vlmcsd/vlmcsd-Solaris-x64
 svccfg import /root/vlmcsd.xml
 
