@@ -1,7 +1,7 @@
-   __        .                   .
- _|  |_      | .-. .  . .-. :--. |-
-|_    _|     ;|   ||  |(.-' |  | |
-  |__|   `--'  `-' `;-| `-' '  ' `-'
-                   /  ; %brand% (%name% %version%)
-                   `-'  %homepage%
-
+  _   _     _                           
+ (_) | |   (_)                          
+  _  | |_   _   _      _    ______
+ | | | __| | | | `\   / |  / /__\_\
+ | | | |_  | | | | \_/| | | |_ _ _   %brand% (%name% %version%)
+ |_|  \__| |_| |_|    |_|  \ _ _ _/  %homepage%
+ 
