@@ -1,3 +1,7 @@
+kms-minimal-1112
+* change name to kms-minimal
+* package download from site
+
 kms-0.3.0
 * Base image change to minimal-64-lts-19.4.0 (2019Q4)
 
